@@ -1,6 +1,15 @@
 Changelog for GEMC
 ==================
 
+4/12/17
+ - added flux-type bank to mirror bank
+
+4/3/17
+ - M. Holtrop: fixed vertex spread
+
+3/24/17
+ - added eic routines in gemc hit processes
+
 3/10/17
  - routine to set generated particle from input file more general
  - reading beagle format
